# WeatherForecast

./: CMakeLists.txt  Default.json  README.md
lib/: cities.cpp  cities.hpp  tui.cpp  weather.cpp  weather.hpp
